# ml-2026

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  Makefile  ReadMe.md  pyproject.toml
camera/: face_finder.py  mirror.py
finance/: orcl_dl.py
git/: log_analysis.py
join_d/: join2.py
scrape/: table_scrape_demo.py
so_2026/m01/: two_way_merge.py  two_way_merge_test.py
so_2026/m01/co_occur/: co_occur.py  co_occur_test.py  stream.py  stream_test.py
so_2026/m03/insert_and_expire/: insert.py  insert_test.py
so_2026/m04/: sede_monthly_questions.py
so_2026/m05/: pymc_prog.py
solubility/: download.py  eda.py  model.py  models.py
tests/camera/: face_finder_test.py
tests/git/: log_analysis_test.py
tracker/: Cargo.toml  Makefile
tracker/src/: main.rs  mirror.rs
