[project]
name = "ml-2026"
version = "0.1.0"
readme = "ReadMe.md"
requires-python = ">= 3.14, < 3.15"

dependencies = [
    "bs4 >= 0.0.2",
    "chromadb >= 1.5.9",
    "graphviz >= 0.21",
    "huggingface-hub >= 1.8.0",
    "hypothesis >= 6.151.10",
    "jax >= 0.10.0",
    "kagglehub >= 1.0.0",
    "llama-index-core >= 0.14.21",
    "llama-index-embeddings-ollama >= 0.9.0",
    "llama-index-llms-ollama >= 0.10.1",
    "llama-index-vector-stores-chroma >= 0.5.5",
    "lxml >= 6.0.2",
    "numpy >= 2.4.3",
    "nutpie >= 0.16.9",
    "opencv-python >= 4.13.0.92",
    "pandas >= 3.0.2",
    "polars >= 1.39.3",
    "pyarrow >= 23.0.1",
    "pymc >= 5.28.5",
    "pypdf >= 6.11.0",
    "requests >= 2.34.2",
    "scikit-learn >= 1.8.0",
    "seaborn >= 0.13.2",
    "sentence-transformers >= 5.3.0",
    "setuptools >= 82.0.1",
    "sqlalchemy >= 2.0.48",
    "streamlit >= 1.57.0",
    "toml >= 0.10.2",
    "transformers >= 5.4.0",
    "ty >= 0.0.27",
    "watchdog >= 6.0.0",
    "xgboost >= 3.2.0",
]
[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pyright >= 1.1.409",
    "pytest",
    "ruff",
    "safety",
    "types-python-dateutil",
    "types-requests",
    "types-toml",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 100

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.mypy]
exclude = "^.*/.venv/"

[tool.pyright]
reportUninitializedInstanceVariable = true
reportMissingTypeStubs = false
exclude = [
    "**/.venv/",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "N", "NPY", "PD", "PERF", "PIE", "PL", "PTH", "PYI", "Q",
    "RET", "RSE", "RUF", "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "PLR2004",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
